# Log

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: config.h.in  logger.h
src/: logger.cpp
